# learn_rust

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
.github/workflows/: on-pr-main.yaml
development/: dummy_data.sql
local/: dummy_data.sql
migrations/: 20230626194115_create_news_articles.sql  Dockerfile
src/: lib.rs  main.rs
src/adapters/: logger_slog.rs  mod.rs  news_repository_postgres.rs  news_search_adapter_gdeltproject.rs  news_search_client_gdeltproject.rs  nyt_news_provider_client.rs
src/core/: domain.rs  ports.rs  service.rs
src/handlers/: rest.rs
src/infrastructure/: postgres.rs
