[package]
name = "learn_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.11.18", features = ["json"]}
serde = { version = "1.0.130", features = ["derive"] }
chrono = "0.4.26"
serde_json = "1.0.96"
ureq = "2.6.2"
serde_derive = "1.0.164"
csv = "1.2.2"
isocountry = "0.3.2"
urlencoding = "2.1.2"
sqlx { version = "0.6.3", featurs = ["postgres"] }

