[package]
name = "learn_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.11.18", features = ["json"]}
serde = { version = "1.0.130", features = ["derive"] }
chrono = "0.4.26"
serde_json = "1.0.96"
ureq = "2.6.2"
serde_derive = "1.0.164"
csv = "1.2.2"
isocountry = "0.3.2"
urlencoding = "2.1.2"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.68"
slog = "2"
slog-term = "2"
slog-async = "2"
axum = "0.6.18"
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.4.0", features = ["add-extension", "trace"] }
thiserror = "1.0"